syntax = "proto3";

service Notifications {
	rpc Get(Query) returns (Response) {}
	rpc Seen(Query) returns (Response) {}
	rpc RegisterPushToken(PushToken) returns (Response) {}
}

message PushToken {
    string token = 1;
}

message Query {
	int64 page = 1;
	int64 limit = 2;
}

message Response {
	repeated Notification notifications = 1;
}

message Notification {
    string uuid = 1;
    string created_at = 2;
    bool seen = 3;
    string title = 4;
    string description = 5;
    string resource_type = 6;
    string resource_uuid = 7;
}